syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "operation.proto";

package pb.v1;

option java_package = "co.ledger.lama.bitcoin.interpreter.protobuf";

service BitcoinInterpreterService {
  rpc SaveTransactions(stream SaveTransactionRequest) returns (stream google.protobuf.Empty) {}
  rpc GetLastBlocks(GetLastBlocksRequest) returns (GetLastBlocksResult) {}
  rpc RemoveDataFromCursor(DeleteTransactionsRequest) returns (ResultCount) {}
  rpc Compute(ComputeRequest) returns (ResultCount) {}
}

// We sort by date
enum SortingOrder {
  DESC = 0;
  ASC = 1;
}

message Account {
  string identifier = 1;
  string coinFamily = 2;
  string coin = 3;
  string group = 4;
}

message SaveTransactionRequest {
  bytes account_id = 1;
  TransactionView transaction = 2;
}

message GetLastBlocksRequest {
  bytes account_id = 1;
}

message GetLastBlocksResult {
  repeated BlockView blocks = 1;
}

message ComputeRequest {
  Account account = 1;
  bytes sync_id = 2;
  repeated AccountAddress addresses = 3;
}

message DeleteTransactionsRequest {
  bytes account_id = 1;
  int64 block_height = 2;
  bytes follow_up_id = 3;
}

message ResultCount {
  int32 count = 1;
}

message PaginationCursor {
  string previous = 1;
  string next = 2;
}
